fix spacing between img and header

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    margin: auto;
+    margin: 20px;
 }
 
 .contactInfo ul {
